<resources>
    <string name="app_name">PlayBook</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_crear_evento">crear_evento</string>
    <string name="title_activity_libros_principall">libros_principall</string>
    <string name="title_activity_libros_referencia_principal_otro_usuario"></string>
    <string name="title_activity_galeria_fotos_principal_otro_usuario"></string>
    <string name="contentDescriptionImagenSet">This is where the picture is going to assign</string>

    <string name="menuChat">Chat</string>
    <string name="menuSalir">Salir</string>
    <string name="menuFotos">Inicio</string>
    <string name="menuPerfil">Perfil</string>
    <string name="menuConfig">Config</string>
    <string name="menuLibros">Libros</string>
    <string name="title_activity_perfil_usuario_local">perfil_usuario_local</string>
</resources>
