<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEF9ED">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/contraint_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:id="@+id/linearLayout41"
                    android:layout_width="140dp"
                    android:layout_height="149dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/simpleTableLayout"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayout40"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/id_img_principal_local"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:srcCompat="@drawable/perfil"
                            tools:layout_editor_absoluteX="-5dp"
                            tools:layout_editor_absoluteY="-1dp" />
                    </android.support.constraint.ConstraintLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout40"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/simpleTableLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout41"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/id_edad_principal_local"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="Edad: 30"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/id_nacionalidad_principal_local" />

                        <TextView
                            android:id="@+id/id_nacionalidad_principal_local"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="Nacionalidad: Colombiano"
                            app:layout_constraintBottom_toTopOf="@+id/id_edad_principal_local"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/id_nombre_principal_local" />

                        <TextView
                            android:id="@+id/id_nombre_principal_local"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="Nombre: Pablo Andres"
                            app:layout_constraintBottom_toTopOf="@+id/id_nacionalidad_principal_local"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </android.support.constraint.ConstraintLayout>

                </LinearLayout>

                <TableLayout
                    android:id="@+id/simpleTableLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:stretchColumns="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout40"> <!-- stretch the second column of the layout-->

                    <!-- first row of the table layout-->

                    <TableRow

                        android:id="@+id/firstRow5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <Button
                                android:id="@+id/id_libros_principal_local"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginBottom="8dp"
                                android:background="@drawable/button_rounded"
                                android:onClick="onClickLibrosLocal"
                                android:text="Libros"
                                android:textColor="@color/cardview_light_background"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </android.support.constraint.ConstraintLayout>

                    </TableRow>

                    <TableRow

                        android:id="@+id/firstRow4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <Button
                                android:id="@+id/id_juegos_local"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginBottom="8dp"
                                android:background="@drawable/button_rounded"
                                android:onClick="onClickJuegosLocal"
                                android:text="Juegos"
                                android:textColor="@color/cardview_light_background"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </android.support.constraint.ConstraintLayout>

                    </TableRow>

                    <TableRow

                        android:id="@+id/firstRow2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <Button
                                android:id="@+id/id_fotos_local"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginBottom="8dp"
                                android:background="@drawable/button_rounded"
                                android:onClick="onClickFotosLocal"
                                android:text="Fotos"
                                android:textColor="@color/cardview_light_background"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </android.support.constraint.ConstraintLayout>

                    </TableRow>

                </TableLayout>

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/floatingMenu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            fab:layout_constraintBottom_toBottomOf="parent"
            fab:layout_constraintEnd_toEndOf="parent"
            fab:layout_constraintHorizontal_bias="1.0"
            fab:layout_constraintStart_toStartOf="parent"
            fab:layout_constraintTop_toTopOf="parent"
            fab:layout_constraintVertical_bias="1.0"
            fab:menu_animationDelayPerItem="0"
            fab:menu_backgroundColor="@android:color/transparent"
            fab:menu_colorNormal="#00C29F"
            fab:menu_colorPressed="#00C29F"
            fab:menu_colorRipple="#00C29F"
            fab:menu_fab_label="Cancel"
            fab:menu_labels_ellipsize="end"
            fab:menu_labels_singleLine="true">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onChat"
                android:src="@drawable/fab_add"
                fab:fab_label="@string/menuChat"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onInicio"
                android:src="@drawable/fab_add"
                fab:fab_label="@string/menuFotos"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onPerfillocal"
                android:src="@drawable/fab_add"
                fab:fab_label="@string/menuPerfil"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabConfig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onConfiguracion"
                android:src="@drawable/fab_add"
                fab:fab_label="@string/menuConfig"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabSalir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSalir"
                android:src="@drawable/fab_add"
                fab:fab_label="@string/menuSalir"
                fab:fab_size="mini" />

        </com.github.clans.fab.FloatingActionMenu>
    </android.support.constraint.ConstraintLayout>

</RelativeLayout>